fixed whitespacing on page 5

--- a/themes/rise-legal/sass/_legal-form.scss
+++ b/themes/rise-legal/sass/_legal-form.scss
@@ -251,6 +251,10 @@ body .gform_wrapper .gfield_error input  {
 	width: 162px;
 }
 
+#field_1_21 {
+	margin-bottom: $base_spacing_large;
+}
+
 #input_1_24 {
 	width: 40%;
 	border-bottom: 2px solid $color_medium_grey; 
@@ -306,6 +310,9 @@ body .gform_wrapper .gfield_error input  {
 	}
 }
 
+#field_1_27 {
+	margin: 3rem 0;
+}
 
 //page 6
 .gsection_description {
